--- a/style/style.css
+++ b/style/style.css
@@ -6,4 +6,53 @@
 
 html {
     font-family:'Rubik Mono One', sans-serif;
+    text-transform: uppercase;
+}
+
+/*SEZIONE UNO:*/
+
+.container {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.top {
+    background-color: red;
+}
+
+.central-box {
+    width: 40%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+}
+
+img {
+    width: 100%;
+}
+
+.title {
+    font-size: 38px;
+    text-align: center;
+}
+
+.yellow {
+    color: yellow;
+}
+
+/*SEZIONE DUE:*/
+
+.central {
+   background-color: green;
+}
+
+/*SEZIONE TRE:*/
+
+.bottom {
+    background-color: yellow;
+}
+.green {
+    color: green;
 }
