--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 html {
     font-family:'Rubik Mono One', sans-serif;
     text-transform: uppercase;
+    scroll-behavior: smooth;
 }
 
 /*SEZIONE UNO:*/
@@ -56,3 +57,43 @@ img {
 .green {
     color: green;
 }
+
+/*NAV BAR*/
+
+ul {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 2;
+    list-style: none;
+}
+
+li {
+    float: left;
+    font-size: 20px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 100px;
+    margin-right: 20px;
+    overflow: hidden;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 15px 20px;
+}
+
+/*Cambiamenti con le interazioni dell'utente*/
+
+ li:hover {
+    box-shadow: 7px 7px rgba(75, 74, 74, 0.3);
+ }
+
+ a:active {
+    background-color: rgb(247, 0, 255);
+ }
+  
+ 
+ 
